Fix usability issue with schedule time selector - The time select list gets cropped when near bottom of the page.   Removed 'display:hidden' to fix this behavior.

--- a/public/scss/_entity.period.scss
+++ b/public/scss/_entity.period.scss
@@ -20,7 +20,6 @@ form.period_form {
   fieldset.period-schedules {
     // font-size: large;
     background-color: $table-accent-bg;
-    overflow: hidden;
 
     > .container-fluid {
       padding: (2 * $spacer) 0 0;
